objects/OnboardingAutomation__mdt.object
<CustomObject>
    <fields>
        <fullName>CSC_Assigned__c</fullName>
        <label>CSC Assigned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude__c</fullName>
        <label>Exclude</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Include__c</fullName>
        <label>Include</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>TextArea</type>
    </fields>
    <label>OnboardingAutomation</label>
    <pluralLabel>OnboardingAutomation</pluralLabel>
</CustomObject>